Feature Authentication + Signup with verification + login + reset password + forget Password + verify email
