# backend/handlers/userHandlers.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"log"
 	"strconv"
 
 	"github.com/bete7512/telegram-cms/models"
@@ -22,9 +23,17 @@ func NewUserHandlers(userService services.UserService) *UserHandlers {
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Success		200		{string}	message	"Get all users"
+//	@Success		200	{array}	models.User
+//	@Security		Bearer
 //	@Router			/users	[get]
 func (h *UserHandlers) GetAllUsers(ctx *gin.Context) {
+	user := ctx.MustGet("user").(models.User)
+
+	log.Println(user)
+	if user.Status != false {
+		ctx.JSON(401, gin.H{"error": "Unauthorized"})
+		return
+	}
 	users, err := h.UserService.FindAll()
 	if err != nil {
 		ctx.JSON(500, gin.H{"error": err.Error()})
@@ -39,7 +48,8 @@ func (h *UserHandlers) GetAllUsers(ctx *gin.Context) {
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Success		200			{string}	message	"Get user by id"
+//	@Success		200	{string}	message	"Get user by id"
+//	@Security		Bearer
 //	@Router			/users/{id}	[get]
 func (h *UserHandlers) GetUserByID(ctx *gin.Context) {
 	// id := ctx.Param("id")
@@ -58,7 +68,8 @@ func (h *UserHandlers) GetUserByID(ctx *gin.Context) {
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Success		201		{string}	message	"User created"
+//	@Success		201	{string}	message	"User created"
+//	@Security		ApiKeyAuth
 //	@Router			/users	[post]
 func (h *UserHandlers) CreateUser(ctx *gin.Context) {
 	var user models.User
@@ -80,7 +91,8 @@ func (h *UserHandlers) CreateUser(ctx *gin.Context) {
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Success		200		{string}	message	"User updated"
+//	@Success		200	{string}	message	"User updated"
+//	@Security		ApiKeyAuth
 //	@Router			/users	[put]
 func (h *UserHandlers) UpdateUser(ctx *gin.Context) {
 	var user models.User
@@ -96,6 +108,30 @@ func (h *UserHandlers) UpdateUser(ctx *gin.Context) {
 	ctx.JSON(200, updatedUser)
 }
 
+//	@Summary		Change password
+//	@Schemes		http
+//	@Description	Change password
+//	@Tags			User
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		models.ChangePasswordRequest	true	"User"
+//	@Success		200		{object}	models.ChangePasswordResponse
+//	@Security		Bearer
+//	@Router			/user/change-password/	[post]
+func (h *UserHandlers) ChangePassword(ctx *gin.Context) {
+	var changePasswordRequest models.ChangePasswordRequest
+	if err := ctx.ShouldBindJSON(&changePasswordRequest); err != nil {
+		ctx.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+	user := ctx.MustGet("user").(models.User)
+	err := h.UserService.ChangePassword(user,changePasswordRequest.OldPassword, changePasswordRequest.NewPassword)
+	if err != nil {
+		ctx.JSON(500, gin.H{"error": err.Error()})
+		return
+	}
+	ctx.JSON(200, gin.H{"message": "Password updated"})
+}
 //	@Summary		Delete user
 //	@Schemes		http
 //	@Description	Delete user
@@ -104,7 +140,6 @@ func (h *UserHandlers) UpdateUser(ctx *gin.Context) {
 //	@Produce		json
 //	@Success		200			{string}	message	"User deleted"
 //	@Router			/users/{id}	[delete]
-
 func (h *UserHandlers) DeleteUser(ctx *gin.Context) {
 	id, _ := strconv.Atoi(ctx.Param("id"))
 	deleted, err := h.UserService.Delete(id)
