# backend/routes/unauthorizedRoutes.go
@@ -11,10 +11,9 @@ import (
 func authRoutes(v1 *gin.RouterGroup, db gorm.DB) {
 	userService := services.NewUserService(repositories.NewDB(&db))
 	authHandlers := handlers.NewAuthenticationHandlers(*userService)
-	v1.POST("/signup", authHandlers.SignUp)
-	v1.POST("/login", authHandlers.Login)
-	v1.POST("/forget-password", authHandlers.ForgetPassword)
-	v1.POST("/reset-password", authHandlers.ResetPassword)
-	v1.POST("/change-password", authHandlers.ChangePassword)
-	v1.POST("/verify-email", authHandlers.VerifyEmail)
+	v1.POST("auth/signup", authHandlers.SignUp)
+	v1.POST("auth/login", authHandlers.Login)
+	v1.POST("auth/forget-password", authHandlers.ForgetPassword)
+	v1.POST("auth/reset-password", authHandlers.ResetPassword)
+	v1.GET("auth/verify-email", authHandlers.VerifyEmail)
 }
